[gd_scene load_steps=26 format=3 uid="uid://badggq5y3umih"]

[ext_resource type="Script" path="res://scenes/pawns/enemies/angledtrapper/angledtrapper.gd" id="1_bqj4r"]
[ext_resource type="PackedScene" uid="uid://c7wv0n5n7l7x4" path="res://scenes/components/health_component/health_component.tscn" id="2_ee2j1"]
[ext_resource type="PackedScene" uid="uid://cspcugxorotor" path="res://scenes/components/hurtbox_component/hurtbox_component.tscn" id="3_ux7kx"]
[ext_resource type="PackedScene" uid="uid://cfo1rpvdpemxj" path="res://scenes/components/hit_flash_component/hit_flash_component.tscn" id="4_qcq6w"]
[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="5_4bxr8"]
[ext_resource type="PackedScene" uid="uid://bu8kgcot4n6tt" path="res://scenes/components/off_screen_component/off_screen_component.tscn" id="6_54r71"]
[ext_resource type="Texture2D" uid="uid://8xw4mk85kciy" path="res://assets/sprites/enemies/angledtrapper/angledtrapper.png" id="6_kojok"]
[ext_resource type="Texture2D" uid="uid://b12u6tg2a0hst" path="res://assets/sprites/vfx/explosions/explosion-a.png" id="7_51w6s"]
[ext_resource type="Texture2D" uid="uid://35hjbjcrwk3g" path="res://assets/sprites/enemies/angledtrapper/angledtrapper_broken.png" id="7_p6kp6"]
[ext_resource type="AudioStream" uid="uid://dh1x4qmkoywop" path="res://assets/audios/explosions/retro_explosion_general_08.wav" id="8_yx0yw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjhbs"]
size = Vector2(18, 32)

[sub_resource type="Shader" id="Shader_4buxf"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float mix_weight: hint_range(0.0, 1.0) = 1.0;
uniform float alpha: hint_range(0.0, 1.0) = 1.0;
uniform vec4 color: source_color = vec4(1, 1, 1, 1);

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	vec3 white = vec3(1, 1, 1);
	vec3 whitened_texture_rgb = mix(texture_color.rgb, color.rgb, mix_weight);
	COLOR = vec4(whitened_texture_rgb, texture_color.a * color.a * alpha);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymuth"]
resource_local_to_scene = true
shader = SubResource("Shader_4buxf")
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ky3ld"]
size = Vector2(18, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hr0l"]
size = Vector2(36, 43)

[sub_resource type="Animation" id="Animation_02ijc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, 32)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, 32)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxComponent/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("DiedSE:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D:material")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D:texture")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_kojok")]
}

[sub_resource type="Animation" id="Animation_s2q6c"]
resource_name = "attack"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:shape:size")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(32, 18), Vector2(16, 27), Vector2(38, 35), Vector2(38, 27), Vector2(38, 11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-16, -16), Vector2(-8, -20.5), Vector2(-19, -13.5), Vector2(-19, -9.5), Vector2(-19, -1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(32, 25), Vector2(16, 34)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxComponent/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, -12.5), Vector2(-8, -17)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"start_invicible"
}, {
"args": [],
"method": &"end_invicible"
}]
}

[sub_resource type="Animation" id="Animation_qj6ed"]
resource_name = "break"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiedSE:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_p6kp6")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_30kmr"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xmalr"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, -11.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:shape:size")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(36, 9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:shape:size")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(36, 16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HurtboxComponent/CollisionShape2D:position")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-18, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rk5si"]
_data = {
"RESET": SubResource("Animation_02ijc"),
"attack": SubResource("Animation_s2q6c"),
"break": SubResource("Animation_qj6ed"),
"idle": SubResource("Animation_30kmr"),
"walk": SubResource("Animation_xmalr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6e1a"]
size = Vector2(72, 66)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4g78f"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7ob2y"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hplu5"]
size = Vector2(36, 5)

[node name="Angledtrapper" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_bqj4r")

[node name="HealthComponent" parent="." instance=ExtResource("2_ee2j1")]
max_health = 2.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_ux7kx")]
visible = false
collision_layer = 4
collision_mask = 8
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_hjhbs")
debug_color = Color(0.803922, 0.360784, 0.552941, 0.419608)

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite") instance=ExtResource("4_qcq6w")]
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite2D")
whiten_material = SubResource("ShaderMaterial_ymuth")

[node name="HitboxComponent" parent="." instance=ExtResource("5_4bxr8")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_ky3ld")
debug_color = Color(0.717647, 0.470588, 0.290196, 0.419608)

[node name="OffScreenComponent" parent="." instance=ExtResource("6_54r71")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-18, 0.5)
shape = SubResource("RectangleShape2D_7hr0l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-18, -8)
texture = ExtResource("6_kojok")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rk5si")
}

[node name="PlayerDetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
position = Vector2(-36, -11)
shape = SubResource("RectangleShape2D_v6e1a")
debug_color = Color(0.682353, 0.411765, 0.745098, 0.419608)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_4g78f")
position = Vector2(-18, -13)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_7ob2y")
texture = ExtResource("7_51w6s")
lifetime = 0.5
one_shot = true

[node name="DiedSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yx0yw")
volume_db = -23.363
pitch_scale = 1.2
bus = &"SE"

[node name="Platform" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(-18, 2.5)
shape = SubResource("RectangleShape2D_hplu5")
debug_color = Color(0.286275, 0.619608, 0.333333, 0.419608)

[node name="Detectors" type="Node2D" parent="."]

[node name="WallBottomDetector" type="RayCast2D" parent="Detectors"]
unique_name_in_owner = true
position = Vector2(-2, 24)
target_position = Vector2(10, 0)

[node name="WallTopDetector" type="RayCast2D" parent="Detectors"]
unique_name_in_owner = true
position = Vector2(-2, -24)
target_position = Vector2(10, 0)

[node name="CeilDetector" type="RayCast2D" parent="Detectors"]
unique_name_in_owner = true
position = Vector2(-2, -21)
target_position = Vector2(0, -16)

[node name="FloorDetector" type="RayCast2D" parent="Detectors"]
unique_name_in_owner = true
position = Vector2(-2, 23)
target_position = Vector2(0, 16)

[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_exited"]
